并发写入测试

--- a/com.yzd.common.root/1.1-com.yzd.common.mq/pom.xml
+++ b/com.yzd.common.root/1.1-com.yzd.common.mq/pom.xml
@@ -33,5 +33,11 @@
             <artifactId>commons-lang</artifactId>
             <version>${commons-lang.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.databene</groupId>
+            <artifactId>contiperf</artifactId>
+            <version>2.1.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
