--- a/com.yzd.common.root/1.1-com.yzd.common.mq/src/test/resources/shardedRedisMQ.properties
+++ b/com.yzd.common.root/1.1-com.yzd.common.mq/src/test/resources/shardedRedisMQ.properties
@@ -8,7 +8,8 @@ redis.timeout=3000
 #redis://服务器地址:端口号/[db index]
 #目前解决高可用的方法--最简单通过host的映射
 #同一台机器可以设置多个redis节点，通过不同的数据库来做水平分片
-redis.jedisPoolConfig.urls=redis://127.0.0.1:6379/1;redis://127.0.0.1:6379/2
+#redis.jedisPoolConfig.urls=redis://127.0.0.1:6379/1;redis://127.0.0.1:6379/2
+redis.jedisPoolConfig.urls=redis://192.168.1.7:6379/1
 #redis.jedisPoolConfig.urls=redis://127.0.0.1:6379/2;redis://127.0.0.1:6378/1
 #如果只有一台机器可以设置多个redis节点，通过不同的数据库来做水平分片
 #redis.jedisPoolConfig.urls=redis://127.0.0.1:6379/0;redis://127.0.0.1:6379/1;redis://127.0.0.1:6379/2;redis://127.0.0.1:6379/3
